# rag-system

./: .env.example  .gitignore  README.md  compose.yaml  money_analysis.md  pyproject.toml  requirements.txt
data/results_evalution/: evaluation_results.json
docker/: Dockerfile.app  Dockerfile.service  entrypoint.sh
evaluation/: Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini
evaluation/configs/experiments/: advanced_reranker.yaml  baseline_full_100.yaml  enhanced_hybrid.yaml
evaluation/docker/: Dockerfile  Dockerfile.simple  Dockerfile.test
evaluation/rag_platform/: __init__.py  cli.py
evaluation/rag_platform/chains/: __init__.py  graph_rag_chain.py  prompt_templates.py  vanilla_rag.py
evaluation/rag_platform/chunkers/: __init__.py  fixed_chunker.py  recursive_chunker.py  sentence_chunker.py
evaluation/rag_platform/core/: __init__.py  base.py  config.py  experiment.py  registry.py
evaluation/rag_platform/embeddings/: __init__.py  openai_embeddings.py
evaluation/rag_platform/evaluation/: __init__.py  improved_ragas_evaluator.py  ragas_evaluator.py
evaluation/rag_platform/graph/: __init__.py  entity_extractor.py  graph_builder.py  graph_retriever.py
evaluation/rag_platform/loaders/: __init__.py  file_loader.py  hybrid_loader.py  pickle_loader.py  wikipedia_kb_loader.py  wikipedia_loader.py
evaluation/rag_platform/retrievers/: __init__.py  base_retriever.py  hybrid_retriever.py  langchain_adapter.py  reranker_retriever.py  vector_retriever.py
evaluation/rag_platform/utils/: __init__.py  file_utils.py  text_utils.py
evaluation/rag_platform/vectorstores/: __init__.py  chroma_store.py
evaluation/results/: rag_experiments_comparison.csv
evaluation/results/experiments/: advanced_reranker_20250605_092946.json  baseline_full_100_20250605_085720.json  enhanced_hybrid_20250605_092100.json
evaluation/scripts/: compare_experiments.py  download_dataset.py  download_full_wikipedia.py  run_experiments.py  test_experiment_configs.py
evaluation/tests/: __init__.py  conftest.py  test_cli.py  test_end_to_end.py  test_graph_rag.py  test_makefile.py  test_retrievers.py
evaluation/tests/integration/: test_pipeline.py
evaluation/tests/unit/: test_chunkers.py  test_config.py  test_loaders.py  test_registry.py
scripts/: create_chroma_db.py  rag_evaluator.py
src/: run_service.py  streamlit_app.py
src/agents/: agents.py  enhanced_retriever.py  enhanced_retriever_simple.py  llama_guard.py  rag_assistant.py  tools.py
src/core/: settings.py
src/schema/: __init__.py  schema.py
src/service/: service.py  utils.py
tests/: README.md
tests/core/: test_settings.py
tests/service/: conftest.py  test_service_e2e.py
